src/fhiclcpp/fhiclcpp/test/testFiles/pass/seq_pass.fcl
#===========================================
# Testing Valid Sequence Syntax
#===========================================

seq1:[ 1, 2, 3 ]
seq2 :[ 1,2,3 ]
seq3: [ 1,2,3 ]
