src/fhiclcpp/fhiclcpp/test/testFiles/fail/seq_fail.fcl
#===========================================
# Testing Incorrect Sequence Syntax
# What's Wrong: Comment in Sequence
#===========================================

seq:[ 1, 2, #hello, 3]
